[package]
name = "bitwuzla"
version = "0.1.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Safe high-level bindings for the Bitwuzla SMT solver"
# documentation = "https://docs.rs/bitwuzla"
# repository = "https://github.com/cdisselkoen/bitwuzla-rs"
readme = "README.md"
keywords = ["boolector", "bitwuzla", "smt", "ffi", "bindings"]
license = "MIT"

[dependencies]
bitwuzla-sys = "0.2.0"
# bitwuzla-sys = { path = "../bitwuzla-sys" }
libc = "0.2.73"

[features]
vendor-cadical = ["bitwuzla-sys/vendor-cadical"]
