[package]
name = "bitwuzla"
version = "0.7.0"
authors = [
    "Mrmaxmeier <Mrmaxmeier@gmail.com>",
    "Craig Disselkoen <craigdissel@gmail.com>",
]
edition = "2018"
description = "Safe high-level bindings for the Bitwuzla SMT solver"
# documentation = "https://docs.rs/bitwuzla"
# repository = "https://github.com/cdisselkoen/bitwuzla-rs"
readme = "README.md"
keywords = ["boolector", "bitwuzla", "smt", "ffi", "bindings"]
license = "MIT"
rust-version = "1.82"

[dependencies]
bitwuzla-sys = "0.7.0"
# bitwuzla-sys = { path = "../bitwuzla-sys" }
# bitwuzla-sys = { git = "https://github.com/Mrmaxmeier/bitwuzla-sys" }
libc = "0.2.73"

[features]
vendor-cadical = ["bitwuzla-sys/vendor-cadical"]
